--- a/style.css
+++ b/style.css
@@ -280,7 +280,11 @@ p {
 
 .support-section {
 
-    background-image: url('');
+    background-image: url('assets/handshake.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 50px 50px;
 
     max-width: 1300px;
     margin: 0 auto;
