--- a/style.css
+++ b/style.css
@@ -346,3 +346,35 @@ p {
     letter-spacing: 0%;
     text-align: center;
 }
+
+
+.footer {
+    margin-top: 200px;
+}
+
+.footer-content {
+    border-radius: 16px;
+
+    background: rgba(13, 19, 33, 0.03);
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-content h1 {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+}
+
+.footer-img{
+    display: flex;
+   
+}
