--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ nav button {
 .main-section {
     margin-top: 200px;
     background: rgba(13, 19, 33, 0.02);
+    padding: 80px 97px;
+    width: 1140px;
+    margin: 90px auto;
+    border-radius: 16px;
 }
 
 
@@ -186,6 +190,9 @@ p {
     justify-content: space-between;
     align-items: center;
     gap: 100px;
+    background-color: white;
+    padding: 48px;
+    border-radius: 18px;
 }
 
 
@@ -329,7 +336,6 @@ p {
 
 
 .support-section {
-
     background-image: url('assets/handshake.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -340,9 +346,11 @@ p {
     justify-content: center;
     align-items: center;
     gap: 40px;
-
     max-width: 1200px;
     margin: 0 auto;
+    border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.2);
+    background-blend-mode: overlay;
 }
 
 
@@ -370,16 +378,15 @@ p {
     box-sizing: border-box;
     border: 1px solid rgba(13, 19, 33, 0.15);
     border-radius: 8px;
-
     background: rgb(255, 255, 255);
-    padding: 19px 20px 19px 20px;
     width: 548px;
-    
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
     letter-spacing: 0%;
-    text-align: center;
+    /* text-align: center; */
+    height: 63px;
+    padding-left: 30px;
 }
 
 .search button {
